# bp-telemetry-core

./: .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  START_HERE.md  dump.rdb  pyproject.toml  pytest.ini  requirements.txt  test_claude_code_hook.py  test_config.py  test_duckdb_analytics.py  test_install_merge.py  test_markdown_writer.py
.beads/: .gitignore  issues.jsonl
.claude/skills/telemetry-insights/: SKILL.md
.claude/skills/telemetry-pr-insights/: SKILL.md
config/: config.schema.yaml  config.yaml  cursor.yaml  privacy.yaml  redis.yaml
docs/: ANALYTICS_API_ENDPOINTS.md  ANALYTICS_CURRENT_STATE.md  ANALYTICS_MATERIALIZED_VIEWS.md  ANALYTICS_PLATFORM_COLUMN_FIX.md  ANALYTICS_SERVICE_REFACTOR_PLAN.md  ANALYTICS_TESTING_PLAN.md  ANALYTICS_TESTING_SUMMARY.md  ANALYTICS_WEEKLY_STATUS.md  ARCHITECTURE.md  BUBBLE_STORAGE_LOCATION.md  BUG_AUDIT_2025_01.md  CLAUDE_JSONL_OFFSET_PERSISTENCE.md  CLAUDE_JSONL_SCHEMA.md  CLAUDE_RAW_TRACES_IMPLEMENTATION.md  COMMIT_ORGANIZATION_SUMMARY.md  CRITICAL_FIXES.md  CURSOR_DATABASE_MONITORING.md  CURSOR_DATA_LOCATION_MASTER_README.md  CURSOR_DISK_KV_AUDIT.md  CURSOR_RAW_TRACES_CAPTURE.md  CURSOR_SCHEMA_INVESTIGATION.md  DATABASE_MONITOR_CRITIQUE.md  DATABASE_MONITOR_IMPLEMENTATION_TASKS.md  DATABASE_MONITOR_REFACTOR.md  FIELD_MAPPING_INVESTIGATION.md  HOOKS_VS_TRACES.md.deprecated  IMPLEMENTATION_PLAN_SQL.md  ITEMTABLE_IMPLEMENTATION_SUMMARY.md  MODEL_INFO_INVESTIGATION.md  MODEL_INFO_SEARCH_SUMMARY.md  MODEL_INFO_VIA_EXTENSION_API.md  MODEL_TOKENS_DURATION_MATRIX.md  PACKAGING_SPEC.md  SESSION_CONVERSATION_SCHEMA.md  SESSION_MANAGEMENT_PLAN.md  SQLITE_COMPOSER_QUERIES.md  TELEMETRY_INSIGHTS_VALIDATION.md  TROUBLESHOOTING.md  WORKSPACE_MARKDOWN_HISTORY.md  packaging_and_installation_spec.md
docs/adr/: 0001-analytics-service-architecture-decisions.md
docs/analytics/: ANALYTICS_FEATURE_ROADMAP.md  ANALYTICS_METRICS_CATALOG.md  ANALYTICS_USER_PERSONAS.md  ANALYTICS_USER_STORIES.md  ANALYTICS_WOW_FACTOR.md  README.md
docs/architecture/: layer1_capture.md  layer1_claude_hook_output.md  layer1_cursor_hook_output.md  layer2_async_pipeline.md  layer2_conversation_reconstruction.md  layer2_db_architecture.md  layer2_local_server.md  layer2_metrics_derivation.md  layer3_cli_interface.md  layer3_local_dashboard.md  layer3_mcp_server.md
docs/meeting-notes/: Analytics-Near-Term-Focus.md  blueplane-sync-2025-12-03.md  ryan-1on1-prep-2025-12-03.md  ryan-aaron-2025-12-03.md
docs/research/: cursor-composer-data-capture-examples.md
scripts/: check_status.py  convert_inline_to_sql.py  extract_cursor_model_usage.py  init_database.py  init_redis.py  install_claude_code.py  install_claude_hooks.py  install_cursor.py  install_cursor_extension.sh  install_extension.sh  install_git_hooks.py  migrate.py  migrate_cursor_model_fields.py  migrate_sessions_schema.py  server_ctl.py  start_server.py  test_database_traces.py  test_end_to_end.py  test_metrics_integration.py  test_metrics_processing.py  uninstall_cursor_extension.sh  uninstall_git_hooks.py  verify_installation.py
src/analytics/: __init__.py  processor.py  service.py
src/analytics/queries/: __init__.py  analytics_queries.py
src/analytics/schemas/: __init__.py
src/analytics/workers/: __init__.py  duckdb_writer.py  sqlite_reader.py
src/blueplane/: __init__.py
src/blueplane/capture/: README.md  __init__.py
src/blueplane/capture/claude_code/: __init__.py
src/blueplane/capture/cursor/: README.md  __init__.py  install_global_hooks.sh  merge_hooks_json.py  send_session_event.py
src/blueplane/capture/shared/: __init__.py  queue_writer.py
src/blueplane/cli/: __init__.py  main.py
src/blueplane/processing/claude_code/: __init__.py  jsonl_offset_store.py  raw_traces_writer.py
src/blueplane/processing/cursor/: workspace_mapper.py
src/blueplane/processing/slow_path/: conversation_worker.py
src/capture/: README.md
src/capture/claude_code/: README.md
src/capture/claude_code/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  session_start.py
src/capture/cursor/: README.md  hook_base.py  hooks.json  install_global_hooks.sh
src/capture/cursor/extension/: .vscodeignore  README.md  package.json
src/capture/git/: __init__.py
src/capture/shared/: config.py  config_models.py  event_schema.py  project_utils.py  queue_writer.py  redis_streams.py
src/cli/: README.md  __init__.py  main.py  pyproject.toml
src/cli/commands/: __init__.py  analyze.py  config.py  export.py  insights.py  metrics.py  sessions.py  watch.py
src/cli/formatters/: __init__.py  base.py  chart.py  json.py  table.py
src/cli/utils/: __init__.py  client.py  completion.py  config.py  doctor.py
src/processing/: __init__.py  server.py
src/processing/claude_code/: __init__.py  event_consumer.py  jsonl_monitor.py  session_monitor.py  session_persistence.py  session_timeout.py  transcript_monitor.py
src/processing/common/: cdc_publisher.py
src/processing/cursor/: __init__.py  data_extractors.py  database_monitor.py  duckdb_writer.py  event_consumer.py  markdown_monitor.py  markdown_writer.py  platform.py  raw_traces_writer.py  session_monitor.py  session_persistence.py  unified_cursor_monitor.py
src/processing/database/: __init__.py  migration_runner.py  schema.py  sqlite_client.py  writer.py
src/processing/fast_path/: __init__.py  batch_manager.py  consumer.py
src/processing/git/: __init__.py  event_consumer.py  repo_utils.py
src/processing/metrics/: __init__.py  calculator.py  redis_metrics.py  shared_state.py
src/processing/slow_path/: __init__.py  metrics_worker.py  worker_base.py  worker_pool.py
testing_integration/: test_claude_telemetry.py  test_cursor_telemetry.py
tests/: __init__.py  conftest.py  test_claude_e2e.py  test_schema_migration.py
tests/analytics/: __init__.py  test_analytics_service.py  test_duckdb_writer.py  test_http_hooks_integration.py  test_integration.py  test_processor_basic.py  test_sqlite_reader.py
tests/fixtures/: __init__.py  duckdb_fixtures.py  sqlite_fixtures.py
(+38 files in other folders)
