# Copyright © 2025 Sierra Labs LLC
# SPDX-License-Identifier: AGPL-3.0-only
# License-Filename: LICENSE

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueplane"
version = "0.1.0"
description = "Privacy-first local telemetry and analytics for AI-assisted coding"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Sierra Labs LLC", email = "team@blueplane.ai"}
]
maintainers = [
    {name = "Sierra Labs LLC", email = "team@blueplane.ai"}
]
keywords = [
    "telemetry",
    "analytics",
    "ai-assisted-coding",
    "claude-code",
    "cursor",
    "privacy-first",
    "local-first"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]

# Core dependencies
dependencies = [
    "redis>=4.6.0",           # Redis client for Streams message queue
    "pyyaml>=6.0",            # YAML configuration parsing
    "aiosqlite>=0.19.0",      # Async SQLite driver for database monitoring
    "click>=8.0.0",           # CLI framework
    "rich>=13.0.0",           # Terminal UI and formatting
]

[project.optional-dependencies]
# Analytics and history sink
analytics = [
    "duckdb>=0.9.0",          # DuckDB for analytics (optional)
]

# Development dependencies
dev = [
    "pytest>=7.4.0",          # Testing framework
    "pytest-asyncio>=0.21.0", # Async test support
    "black>=23.0.0",          # Code formatting
    "mypy>=1.5.0",            # Type checking
    "ruff>=0.1.0",            # Fast linter
]

# All optional dependencies
all = [
    "blueplane[analytics,dev]"
]

[project.urls]
Homepage = "https://github.com/blueplane-ai/bp-telemetry-core"
Documentation = "https://github.com/blueplane-ai/bp-telemetry-core/blob/main/README.md"
Repository = "https://github.com/blueplane-ai/bp-telemetry-core"
Issues = "https://github.com/blueplane-ai/bp-telemetry-core/issues"

[project.scripts]
# CLI entry point for user-facing commands
bp = "blueplane.cli.main:main"

# Processing server entry point
bp-server = "processing.server:main"

[tool.setuptools]
# Package discovery - find all packages in src/
packages = {find = {where = ["src"]}}

[tool.setuptools.package-dir]
# Map package namespace to source directory
"" = "src"

[tool.setuptools.package-data]
# Include non-Python files in packages
"*" = ["*.yaml", "*.yml", "*.json", "*.md"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# Ruff configuration (linter)
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
