# Blueplane Telemetry Core - Python Package Configuration
# Copyright © 2025 Sierra Labs LLC
# SPDX-License-Identifier: AGPL-3.0-only

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueplane-telemetry"
version = "0.1.0"
description = "Privacy-first telemetry for AI-assisted coding"
authors = [{name = "Sierra Labs", email = "support@blueplane.ai"}]
license = {text = "AGPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["telemetry", "ai", "claude", "cursor", "privacy", "analytics"]

dependencies = [
    # Redis for message queue and metrics
    "redis>=4.6.0",
    "aioredis>=2.0.0",

    # Database
    "aiosqlite>=0.19.0",

    # Configuration and CLI
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",

    # Processing server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",

    # Optional analytics
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
# CLI entry point (to be implemented)
bp = "blueplane.cli.main:cli"

# Processing server entry point
bp-server = "blueplane.processing.server:main"

[project.urls]
Homepage = "https://blueplane.ai"
Repository = "https://github.com/blueplane-ai/bp-telemetry-core"
Issues = "https://github.com/blueplane-ai/bp-telemetry-core/issues"

[tool.setuptools]
# Use src layout with blueplane package
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["blueplane*"]
namespaces = false

[tool.setuptools.package-data]
blueplane = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "duckdb.*"
ignore_missing_imports = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
